tests/compile-fail/report_async_fn.stderr
error: #[report] does not support async functions. Place #[report] below #[tokio::main] or similar runtime attributes so that async is resolved first.
 --> tests/compile-fail/report_async_fn.rs:9:1
  |
9 | async fn main() -> Result<(), MyError> {
  | ^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/compile-fail/report_async_fn.rs:11:2
   |
11 | }
   |  ^ consider adding a `main` function to `$DIR/tests/compile-fail/report_async_fn.rs`
